[ARM64] GCC generates wrong code with -O2 flag in WTF::weakCompareAndSwap https://bugs.webkit.org/show_bug.cgi?id=130500

Reviewed by Filip Pizlo.

Set the first operand to the exact register in the inline assembly with GCC.

* wtf/Atomics.h:
(WTF::weakCompareAndSwap):


Canonical link: https://commits.webkit.org/148756@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@166234 268f45cc-cd09-0410-ab3c-d52691b4dbfc